@@ -3,6 +3,8 @@ Changelog
 
 1.7-dev - (unreleased)
 ----------------------
+* Feature: Added checkbox option to facets
+  [pasoviul refs #21412]
 
 1.6 - (2014-10-15)
 ------------------
